fix: center theme toggle button on mobile header

--- a/css/styles.css
+++ b/css/styles.css
@@ -2293,8 +2293,11 @@ input, select, textarea {
     }
 
     .theme-toggle {
-        margin-left: auto;
-        margin-right: 0.5rem;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .menu-toggle {
